; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/e1000/extr_e1000_osdep.c_e1000_read_pci_cfg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/e1000/extr_e1000_osdep.c_e1000_read_pci_cfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_hw = type { i64 }
%struct.e1000_osdep = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @e1000_read_pci_cfg(%struct.e1000_hw* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.e1000_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.e1000_hw* %0, %struct.e1000_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load %struct.e1000_hw*, %struct.e1000_hw** %4, align 8
  %8 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to %struct.e1000_osdep*
  %11 = getelementptr inbounds %struct.e1000_osdep, %struct.e1000_osdep* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @pci_read_config(i32 %12, i32 %13, i32 2)
  %15 = load i32*, i32** %6, align 8
  store i32 %14, i32* %15, align 4
  ret void
}

declare dso_local i32 @pci_read_config(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
